# RKBodySense

./: README.md  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  REAME.md  cJson.cpp  image_common.h  image_converter.cpp  image_converter.h  image_detect_rockx.cpp  image_detect_rockx.h  image_facedetect.cpp  image_facedetect.h  image_reader.cpp  image_reader.h  main_test.cpp  native_detect.cpp  native_image.cpp  yuv420_converter.cpp  yuv420_converter.h
app/src/main/java/com/rockchips/bodysense/: BitmapRenderer.java  BodyPoseActivity.java  KalmanFilter2D.java  NVInfoLandmarks.java  NVObjectRender.java  NVTaskPerf.java  NVTaskRockx.java  NativeDetect.java  NativeImage.java
app/src/main/java/com/rockchips/bodysense/utils/: BitmapUtil.java  Camera2Reader.java  CameraReader.java  FileUtil.java  FrameFormat.java  FrameReader.java  ObjectRenderer.java  RkCameraUtils.java  VideoReader.java
app/src/main/libs/: README.md
app/src/main/libs/rockx-rk3576/: RockXConfig.cmake
app/src/main/libs/rockx-rk3576/include/: rockx.h  rockx_builder.h  rockx_container.h  rockx_function.h  rockx_mem.h  rockx_module.h  rockx_module_type.h  rockx_type.h
app/src/main/libs/rockx-rk3576/include/utils/: rockx_data_utils.h  rockx_image_utils.h  rockx_tensor_utils.h
app/src/main/res/drawable/: shape_circle.xml
app/src/main/res/layout/: activity_body_pose.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/martin/mediafilter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
